Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-50220
SpinBox can't be inc/dec using mouse wheel
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P3: Somewhat important
Fix Version/s:
5.7.0 Beta
Affects Version/s:
5.6.0 Beta
Component/s:
Quick: Controls 2
Labels:
None
Commits:
1d5b91dd2cece48802b6003eac2b2bf4bdd0d69d
Description
SpinBox can't be inc/dec using mouse wheel
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Unassigned
Reporter:
BogDan Vatra
Votes:
0
Vote for this issue
Watchers:
3
Start watching this issue
Dates
Created:
30 Dec '15 12:18
Updated:
06 Dec '18 09:25
Resolved:
25 Feb '16 08:23
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Add Control::wheelEnabled
Gerrit Review:
SpinBox: add wheel support
Gerrit Review: