Add Control::wheelEnabled

Change-Id: I1ea2c93e908c98119ba25e3e40e02ab96eca8dd2
Task-number: QTBUG-50220
Task-number: QTBUG-50221
Task-number: QTBUG-50222
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>